fix: update CSS styles for improved layout and readability

--- a/style.css
+++ b/style.css
@@ -20,17 +20,17 @@ main {
 }
 
 main > div {
-  background: oklch(21% 0.006 285.885);
+  border: 2px solid oklch(21% 0.006 285.885);
   padding: 1rem;
   margin-bottom: 1lh;
-  border-radius: 20px;
+  border-radius: 10px;
   display: grid;
   grid-template-columns: 1fr auto;
 }
 
 h1 {
   line-height: 95%;
-  font-size: 4rem;
+  font-size: 2.7rem;
   text-transform: uppercase;
   color: #f3f3f3;
 }
@@ -45,16 +45,17 @@ main > div > div {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-radius: calc(1rem + 20px);
-  color: oklch(21% 0.006 285.885);
+  gap: 0.5rem;
+  border-radius: calc(1rem - 10px);
+  color: #f3f3f3;
   padding: 1rem;
   padding-bottom: 1.5rem;
-  background-color: #f3f3f3;
+  border: 2px solid oklch(21% 0.006 285.885);
 }
 
 
 main > div > div > p {
-  font-size: 1.4rem;
+  font-size: 0.8rem;
   font-weight: 600;
   letter-spacing: 0.1rem;
 }
@@ -62,7 +63,7 @@ main > div > div > p {
 .total {
   line-height: 1;
   font-weight: 700;
-  font-size: 10rem;
+  font-size: 6rem;
 }
 
 main ul {
@@ -81,8 +82,8 @@ ul > li {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background-color: oklch(21% 0.006 285.885);
-  border-radius: 1rem;
+  border: 2px solid oklch(21% 0.006 285.885);
+  border-radius: .5rem;
   overflow: hidden;
 }
 
